tests/tests/errors/2006-5.vb
'#compiler-options:/target:
'#compiler-message:Command line error BC2006 : option 'target' requires ':exe|winexe|library'
'#exit-code:1